cta buttons and new header color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,15 @@ html,
 body {
   font-family: 'Roboto', sans-serif;
 }
+.cta-button {
+  @apply cursor-pointer mb-24 bg-button-primary text-white shadow-xl rounded-md p-5 md:px-20 md:text-2xl text-xl capitalize
+}
+.cta-button-1 {
+  @apply cursor-pointer w-full bg-[#72d732] text-white shadow-xl rounded-md p-3 md:text-2xl text-xl capitalize
+}
+.academy-header {
+  @apply text-[#286900]
+}
+.offer-button {
+  @apply cursor-pointer mb-24 bg-warning text-white shadow-xl rounded-md py-2 md:px-10 px-3 md:text-2xl text-xl capitalize
+}
